--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sebastian Tegel",
+  "author": "Nani Dam",
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.8.3"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.3"
+    "@parcel/transformer-sass": "^2.8.3",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "typescript": "^4.9.5"
   }
 }
